--- a/src/index.scss
+++ b/src/index.scss
@@ -10,14 +10,14 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --black: #04152d;
-  --black2: #041226;
-  --black3: #020c1b;
-  --black-lighter: #1c4b91;
-  --black-light: #173d77;
-  --pink: #da2f68;
-  --orange: #f89e00;
-  --gradient: linear-gradient(98.37deg, #f89e00 0.99%, #da2f68 100%);
+  --black: #0b0b0b;
+  --black2: #121212;
+  --black3: #1a1a1a;
+  --black-lighter: #262626;
+  --black-light: #1f1f1f;
+  --pink: #ffffff;
+  --orange: #e0e0e0;
+  --gradient: linear-gradient(98.37deg, #ffffff 0.99%, #777777 100%);
 }
 
 * {
@@ -37,7 +37,7 @@ body {
 .skeleton {
   position: relative;
   overflow: hidden;
-  background-color: #0a2955;
+  background-color: #1a1a1a;
 
   &::after {
     position: absolute;
@@ -47,10 +47,10 @@ body {
     left: 0;
     transform: translateX(-100%);
     background-image: linear-gradient(90deg,
-        rgba(#193763, 0) 0,
-        rgba(#193763, 0.2) 20%,
-        rgba(#193763, 0.5) 60%,
-        rgba(#193763, 0));
+        rgba(#333, 0) 0,
+        rgba(#333, 0.2) 20%,
+        rgba(#333, 0.5) 60%,
+        rgba(#333, 0));
     animation: shimmer 2s infinite;
     content: "";
   }
