--- a/src/pages/details/detailsBanner/style.scss
+++ b/src/pages/details/detailsBanner/style.scss
@@ -15,7 +15,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        opacity: 0.1;
+        opacity: 0.2;
         overflow: hidden;
         .lazy-load-image-background {
             width: 100%;
@@ -33,8 +33,8 @@
         height: 250px;
         background: linear-gradient(
             180deg,
-            rgba(4, 21, 45, 0) 0%,
-            #04152d 79.17%
+            rgba(11, 11, 11, 0) 0%,
+            #0b0b0b 79.17%
         );
         position: absolute;
         bottom: 0;
