--- a/src/pages/home/heroBanner/style.scss
+++ b/src/pages/home/heroBanner/style.scss
@@ -34,8 +34,8 @@
         height: 250px;
         background: linear-gradient(
             180deg,
-            rgba(4, 21, 45, 0) 0%,
-            #04152d 79.17%
+            rgba(11, 11, 11, 0) 0%,
+            #0b0b0b 79.17%
         );
         position: absolute;
         bottom: 0;
